<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WINOApp</string>
    <string name="menu_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="wine_search_string">Enter Wine Here</string>
    <string name="login_button_string">Login</string>
    <string name="title_activity_search">Search</string>
    <string name="empty"></string>
    <string name="password_hint_string">Password</string>
    <string name="username_hint_string">Email</string>
    <string name="fbLogin_button_string">Connect with Facebook</string>
    <string name="new_register_button_string">Sign Up</string>
    <string name="or_textView_string">or</string>
    <string name="bought_button_string">Add to My Vineyard</string>
    <string name="title_activity_inventory_view">My Vineyard</string>
    <string name="inv_add_button_string">Add</string>
    <string name="inv_srh_textView_hint">Search</string>
    <string name="title_activity_sign_up_form">Sign Up Form</string>
    <string name="last_name_field_hint_string">Last</string>
    <string name="email_label_string">Email:</string>
    <string name="username_label_string">Username:</string>
    <string name="password_label_string">Password:</string>
    <string name="date_of_birth_label_string">Birthday:</string>
    <string name="male_radio_button_string">Male</string>
    <string name="female_radio_button_string">Female</string>
    <string name="decline_gender_radio_button_string">Leave Out</string>
    <string name="first_name_field_hint_string">First</string>
    <string name="name_text_label_string">Name:</string>
    <string name="weight_field_string">lbs</string>
    <string name="date_field_hint_string">MM/DD/YYYY</string>
    <string name="password_field_hint_string">enter password</string>
    <string name="username_field_hint_string">username</string>
    <string name="weight_label_string">Weight:</string>
    <string name="email_field_hint_string">Enter your email</string>
    <string name="register_submit_button_string">Submit</string>
    <string name="or_seperator_string">" or "</string>
    <string name="login_retrieval_link_string">I forgot my Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_inventory">My Vineyard</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <!-- Ayesha added the following strings -->
    <string name="type_of_wine">Villa Toscano Barbera</string>
    <string name="location_of_origin">Shenandoah Valley</string>
    <string name="vintage_string">Vintage:</string>
    <string name="storage_location_string">Storage Location:</string>
    <string name="mock_storage">Third row, left column of basement wine rack</string>
    <string name="notes_string">Notes:</string>
    <string name="mock_notes">Particular favorite of Dan</string>
    <string name="quantity_string">Quantity:</string>
    <string name="your_rating">Your Rating:</string>
    <string name="edit_button_string">Edit</string>
    <string name="title_activity_add_wine_info">Add Wine Info</string>
    <string name="title_activity_add_wishlist_info">Add Wishlist Info</string>
    <string name="wine_name_string">Wine Name:</string>
    <string name="vineyard_string">Vineyard:</string>
    <string name="add_button_string">Save</string>
    <string name="post_to_facebook_string">Post to Facebook</string>
    <string name="quantity_hint_string">#</string>
    <string name="additional_notes_hint_string">Additional notes</string>
    <string name="location_stored_hint_string">Location stored</string>
    <string name="additional_notes_string">Additional notes</string>
    <string name="location_stored_string">Location stored</string>
    <string name="enter_year_hint_string">Enter year</string>
    <string name="enter_vineyard_hint_string">Enter vineyard</string>
    <string name="enter_varietal_hint_string">Enter varietal(s)</string>
    <string name="enter_name_hint_string">Enter name</string>
    <string name="inventory_button_string">My Vineyard</string>
    <string name="menu_button_string">Menu</string>
    <string name="welcome_string">Welcome!</string>
    <string name="logout_button_string">Logout</string>
    <string name="help_button_string">I\'m New to Wine</string>
    <string name="surprise_button_string">Surprise Me</string>
    <string name="title_activity_bac">B.A.C. Calculator</string>
    <string name="BAC_button_string">BAC</string>
    <string name="social_button_string">Social</string>
    <string name="search_button_string">Search</string>
    <string name="pairIt_button_string">Pair It</string>
    <string name="wishlist_button_string">Wishlist</string>
    <string name="bac_title">Are you drunk?\nNeed to call a cab?</string>
    <string name="calc_bac_button_string">Use\nBreathalyzer</string>
    <string name="num_of_drinks">How many drinks?</string>
    <string name="time_check">How long ago did you start drinking?</string>
    <string name="hour_input">hours</string>
    <string name="minute_input">minutes</string>
    <string name="weight_input">in lbs</string>
    <string name="gender_input">Male/Female</string>
    <string name="weight_bac">Weight</string>
    <string name="gender_bac">Male or Female?</string>
    <string name="tutorial_menu_title_string">Tutorials and Resources</string>
    <string name="tutorial_menu_greeting_string">Do you want to brush up on your wine knowledge? Or do you have the need to use a winery locator? We\'ve got you covered!</string>
    <string name="video_tutorial_button_string">Video Tutorials</string>
    <string name="wine_resources_button_string">Wine Resources</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_tutorial_video">Tutorial Videos</string>
    <string name="tutorial_video_menu_title">Video Tutorials</string>
    <string name="tutorial_video_wine_101">Wine Tasting 101</string>
    <string name="tutorial_video_restaurant_ordering">Ordering Wine at a Restaurant</string>
    <string name="tutorial_video_leftover_wine">What to do with leftover wine</string>
    <string name="tutorial_video_wine_gadgets">Ideal Wine Gadgets</string>
    <string name="tutorial_video_wine_glasses">Wine Glasses</string>
    <string name="tutorial_video_wine_cheese_pairing">Wine and Cheese Pairing</string>
    <string name="title_activity_tutorial_resource">Tutorial Resources</string>
    <string name="tutorial_resource_menu_title">Wine Resources</string>
    <string name="tutorial_resource_winery_locator">Winery Locator</string>
    <string name="tutorial_resource_wine_reviews">Wine Reviews</string>
    <string name="tutorial_resource_wine_news">Wine News</string>
    <string name="tutorial_resource_wine_business_news">Wine Business News</string>
    <string name="title_inventory_view_info">My Wine</string>
    <string name="title_wishlist_view_info">My Wishlist</string>
    <string name="title_activity_quick_add">Quick Add</string>
    <string name="quick_add_button_string">Quick Add</string>
    <string name="hello">Hello</string>
    <string name="title_activity_main__wmp">Food and Wine Pairings</string>
    <string name="match_wine_button_string">Pair a Wine!</string>
    <string name="meal_match_button_string">Pair a Meal!</string>
    <string name="title_activity_meal__wmp">Pair a Meal</string>
    <string name="meal_wmp_back_button_string">Pick a Category</string>
    <string name="meal_wmp_heading_string">Categories</string>

    <!-- Facebook Integration Strings (Jon) -->
    <!-- this is the facebook APP ID: -->
    <string name="APP_ID">"387799824662772"</string>
    <string name="login">Login to Facebook</string>
    <string name="description">Login to Facebook</string>
    <string name="post_to_wall">Post To Wall</string>
    <string name="smi_see_friend_activty">See Friend Activity</string>
    <string name="smi_recommend_wine">Recommend A Wine</string>
    <string name="smi_recommend_wino">Recommend WINO!</string>
    <string name="smi_create_a_wine_event">Create A Wine Event</string>
    <string name="friends">friends</string>
    <string name="get_started">Connect with your friends!\n Log in using Facebook.</string>
    <string name="title_activity_social">Social</string>
    <string name="action_eating">What are you eating?</string>
    <string name="action_location">Where are you?</string>
    <string name="action_people">With whom?</string>
    <string name="action_eating_default">Select a meal</string>
    <string name="action_location_default">Select a place</string>
    <string name="action_people_default">Select friends</string>
    <string name="announce">Announce</string>
    <string name="settings">Settings</string>
    <string name="select_meal">Select a meal</string>
    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_button_text">Thanks!</string>
    <string name="result_dialog_text">Posted Open Graph action, id: %1$s</string>
    <string name="progress_dialog_text">Announcing, please wait...</string>
    <string name="single_user_selected">%1$s</string>
    <string name="two_users_selected">%1$s and %2$s</string>
    <string name="multiple_users_selected">%1$s and %2$s others</string>
    <string name="error_dialog_title">Something Went Wrong</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="error_dialog_default_text">No response from server.</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_authentication_retry">An error occurred that requires your attention. %1$s</string>
    <string name="error_authentication_reopen">An error occurred, please re-login.</string>
    <string name="error_permission">Please allow us to post on your behalf.</string>
    <string name="error_server">The server is busy, please retry later.</string>
    <string name="error_bad_request">An error occurred, please contact the developer with the following message: %1$s</string>
    <string name="error_unknown">An unknown error occurred, please contact the developer with the following message: %1$s</string>
    <string name="exception">Exception: %1$s</string>
    <string name="share">Share</string>
    <!-- End of Social Media Integration Strings (Jon) -->

    <string name="title_activity_merlot">MerlotActivity</string>
    <string name="title_activity_chardonnay">ChardonnayActivity</string>
    <string name="title_activity_paired_wine">Paired Wine Suggestion</string>
    <string name="rateName">Rating:</string>
    <string name="yearName">Year:</string>
    <string name="acronym_details_string">Wine Interface Necessary for Oenophiles</string>
    <string name="varietal_string">Varietal:</string>
    <string name="acronym_string">Wine Interface Necessary for Oenophiles</string>
    <string name="title_activity_wine__wmp">Wine Pairing</string>
    <string name="title_activity_paired">Pair a Wine</string>
    <string name="title_activity_recipies">Recipies</string>
    <string name="title_activity_surprise">Surprise Me!</string>
    <string name="search_hint_string">Enter Search Here</string>
    <string name="your_surprise_pick_string">Your Surprise Pick</string>
    <string name="title_activity_main_slide">MainSlideActivity</string>

</resources>