<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/cream_texture">

    <TextView
        android:id="@+id/bac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/bac_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#801108" />

    <ImageView
        android:id="@+id/surprise_image"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:layout_below="@+id/bac"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@+id/logo_content_description"
        android:src="@drawable/wino_rhino_transparent" />


    <Button
        android:id="@+id/calc_bac"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFFFF"
        android:onClick="calcBAC"
        android:text="@string/calc_bac_button_string" />

    <EditText
        android:id="@+id/minutes_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hours_field"
        android:layout_alignBottom="@+id/hours_field"
        android:layout_alignRight="@+id/surprise_wine_name_string"
        android:layout_toRightOf="@+id/hours_field"
        android:ems="5"
        android:hint="@string/minute_input"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/surprise_wine_name_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hours_field"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/time_check"
        android:textColor="#801108"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/how_many_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/surprise_wine_name_string"
        android:layout_alignLeft="@+id/surprise_wine_name_string"
        android:layout_marginBottom="22dp"
        android:text="@string/num_of_drinks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#801108" />

    <EditText
        android:id="@+id/hours_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calc_bac"
        android:layout_alignLeft="@+id/surprise_wine_name_string"
        android:ems="5"
        android:hint="@string/hour_input"
        android:inputType="number" />

    <EditText
        android:id="@+id/drinks"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/how_many_drinks"
        android:layout_alignRight="@+id/surprise_wine_name_string"
        android:layout_toRightOf="@+id/how_many_drinks"
        android:ems="2"
        android:inputType="number" />

    <EditText
        android:id="@+id/weight_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drinks"
        android:layout_alignLeft="@+id/how_many_drinks"
        android:layout_toLeftOf="@+id/calc_bac"
        android:ems="10"
        android:hint="@string/weight_input"
        android:inputType="number" />

    <EditText
        android:id="@+id/gender_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drinks"
        android:layout_alignLeft="@+id/calc_bac"
        android:layout_alignRight="@+id/drinks"
        android:ems="10"
        android:hint="@string/gender_input"
        android:inputType="text" />

    <TextView
        android:id="@+id/surprise_heading_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weight_field"
        android:layout_alignLeft="@+id/weight_field"
        android:layout_alignRight="@+id/weight_field"
        android:text="@string/weight_bac"
        android:gravity="center"
        android:textColor="#801108" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/surprise_wine_varietal_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/surprise_heading_string"
        android:layout_alignLeft="@+id/gender_field"
        android:layout_alignRight="@+id/gender_field"
        android:text="@string/gender_bac"
        android:gravity="center"
        android:textColor="#801108" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>