<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cream_texture"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuickAddActivity" >

    <Button
        android:id="@+id/inventory_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/inventory_button_string"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="addWineToInv" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/inventory_button"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:background="#cccccc" />

    <Button
        android:id="@+id/wishlist_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/inventory_button"
        android:layout_marginTop="30dp"
        android:text="@string/wishlist_button_string"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="addWineToWishlist" />
    
     <TextView
        android:id="@+id/surprise_heading_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inventory_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#F7E7CE"
        android:text="@string/or_seperator_string"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>