<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/cream_texture" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AddWineInfo" >

        <ImageView
            android:id="@+id/viewwine_img"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/inv_sample" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="95" >

            <!-- Wine Name -->

            <TextView
                android:id="@+id/wine_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/wine_name_string"
                android:textColor="#801108" />

            <TextView
                android:id="@+id/wine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wine_name_label"
                android:layout_alignRight="@+id/container"
                android:layout_toRightOf="@+id/wine_name_label"
                android:ems="10"
                android:paddingLeft="10dp" />

            <!-- Vineyard -->

            <TextView
                android:id="@+id/vineyard_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wine_name_label"
                android:layout_below="@+id/wine_name_label"
                android:layout_marginTop="15dp"
                android:text="@string/vineyard_string"
                android:textColor="#801108" />

            <TextView
                android:id="@+id/vineyard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/vineyard_label"
                android:layout_alignRight="@+id/wine_name"
                android:layout_marginRight="0dp"
                android:layout_toRightOf="@+id/vineyard_label"
                android:paddingLeft="10dp" />

            <!-- Varietals -->

            <TextView
                android:id="@+id/varietal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/wine_name_label"
                android:layout_below="@+id/vineyard_label"
                android:layout_marginTop="15dp"
                android:text="@string/varietal_string"
                android:textColor="#801108" />

            <TextView
                android:id="@+id/varietal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/varietal_label"
                android:layout_alignRight="@+id/wine_name"
                android:layout_marginRight="0dp"
                android:layout_toRightOf="@+id/varietal_label"
                android:paddingLeft="10dp" />
            <!-- Vintage -->

            <TextView
                android:id="@+id/vintage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/varietal_label"
                android:layout_marginTop="15dp"
                android:text="@string/vintage_string"
                android:textColor="#801108" />

            <TextView
                android:id="@+id/vintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/vintage_label"
                android:layout_toRightOf="@+id/vintage_label"
                android:ems="10"
                android:paddingLeft="10dp" />

            <!-- Quantity -->

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vintage_label"
                android:layout_marginTop="25dp"
                android:text="@string/quantity_string"
                android:textColor="#801108" />

            <!-- Container -->


            <!-- Rating Bar -->

            <TextView
                android:id="@+id/your_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity_label"
                android:layout_marginTop="15dp"
                android:text="@string/your_rating"
                android:textColor="#801108" />

            <RatingBar
                android:id="@+id/wine_rating_bar"
                style="@style/wineRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/your_rating_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:isIndicator="false"
                android:numStars="5"
                android:progressDrawable="@drawable/wine_rating_bar_full"
                android:rating="0"
                android:stepSize="0.5" />

            <!-- Storage Location -->

            <TextView
                android:id="@+id/storage_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wine_rating_bar"
                android:layout_marginTop="15dp"
                android:text="@string/storage_location_string"
                android:textColor="#801108" />

            <TextView
                android:id="@+id/storage_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/storage_location_label"
                android:layout_below="@+id/storage_location_label"
                android:ems="10" />

            <!-- Notes -->

            <TextView
                android:id="@+id/notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/storage_location"
                android:layout_below="@+id/storage_location"
                android:text="@string/notes_string"
                android:textColor="#801108" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/notes_label"
                android:layout_below="@+id/notes_label"
                android:ems="10" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/your_rating_label"
                android:layout_alignRight="@+id/storage_location_label"
                android:layout_toRightOf="@+id/quantity_label"
                android:ems="10"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/your_rating_label"
                android:layout_toRightOf="@+id/quantity"
                android:ems="10"
                />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>